Large links now wrap correctly on mobile.

--- a/index.css
+++ b/index.css
@@ -101,7 +101,7 @@ body {
 }
 
 .nowrap {
-    white-space: nowrap;
+    display: inline-block;
 }
 
 .linkcontainer {
